fix spacing on mobile

--- a/src/App.module.scss
+++ b/src/App.module.scss
@@ -91,7 +91,7 @@ $background: #fefefe;
     flex-direction: column;
     height: auto;
     align-items: center;
-    padding: 42px 24px 0px;
+    padding: 42px 20px 0px;
     gap: 24px;
   }
 }
