--- a/src/components/ItemCard/ItemCard.module.scss
+++ b/src/components/ItemCard/ItemCard.module.scss
@@ -21,9 +21,15 @@
 .icon {
   padding-top: 28px;
   position: relative;
+  margin-right: 12px;
   img {
     border-radius: 99px;
     border: 3px solid var(--theme);
+    height: 40px;
+    width: 40px;
+  }
+  @media screen and (max-width: 450px) {
+    margin-right: 8px;
   }
 }
 
@@ -89,7 +95,6 @@
 
 .wrapper {
   display: flex;
-  gap: 12px;
   margin-bottom: 12px;
   max-height: 999px;
   transition-property: margin-bottom, max-height, opacity;
